--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "My Extension",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["activeTab", "scripting"],
+    "permissions": ["activeTab", "scripting", "downloads"],
     "action": {
       "default_popup": "popup.html"
     }
