--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Naro Crowler",
-    "description": "My Extension",
+    "description": "小説家になろうのページからncode、小説タイトル、サブタイトル、作者、本文の情報を一時保存し、CSVとしてダウンロードする",
     "version": "1.0",
     "manifest_version": 3,
     "permissions": ["activeTab", "scripting"],
